corpsso/azure_ad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=azure
        - --email-domain=*
        - --https-address=0.0.0.0:8443
        # AzureAD callback response cookie exceeds 4KB limit
        - --session-cookie-minimal
        - --cookie-expire=20h
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 8443
          protocol: TCP
