corpsso/github.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=github
        - --email-domain=*
        - --http-address=0.0.0.0:4180
        - --pass-access-token
        - --cookie-expire=20h
        - --set-authorization-header=true
        - --reverse-proxy=true
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.8.2
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
