corpsso/ingress_login.template.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  ports:
    - port: 4180
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: login.corp.${DOMAIN}
    http:
      paths:
      - path: /oauth2
        pathType: 'Prefix'
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
